
syntax = "proto3";
option go_package = "github.com/olympus-protocol/ogen/proto";

import "google/api/annotations.proto";
import "common.proto";

service Utils {

    /** 
        Method: StartProposer 
        Input: message Password
        Response: message Success
        Description: Decrypts the Keystore and starts voting/proposing.
    */
    rpc StartProposer(Password) returns (Success) {
        option (google.api.http) = {
            post: "/utils/startproposer"
            body: "*"
        };
    }
    /** 
        Method: GenValidatorKey 
        Input: message GenValidatorKeys
        Response: message KeyPairs
        Description: Returns private keys generated for validators start.
    */
    rpc GenValidatorKey(GenValidatorKeys) returns (KeyPairs) {
        option (google.api.http) = {
            post: "/utils/genvalidatorkey"
            body: "*"
        };
    }

    /** 
        Method: SubmitRawData 
        Input: message RawData
        Response: message Success
        Description: Broadcast a raw elements of different transactions.
    */
    rpc SubmitRawData(RawData) returns (Success) {
        option (google.api.http) = {
            post: "/utils/submitrawdata"
            body: "*"
        };
    }
   
    /** 
        Method: DecodeRawTransaction 
        Input: message RawData
        Response: message Tx
        Description: Returns a raw transaction on human readable format.
    */
    rpc DecodeRawTransaction(RawData) returns (Tx) {
        option (google.api.http) = {
            post: "/utils/decoderawtransaction"
            body: "*"
        };
    }

    /** 
        Method: DecodeRawBlock 
        Input: message RawData
        Response: message Block
        Description: Returns a raw block on human readable format.
    */
    rpc DecodeRawBlock(RawData) returns (Block) {
        option (google.api.http) = {
            post: "/utils/decoderawblock"
            body: "*"
        };
    }
}

message Password {
    string password = 1;
}

message GenValidatorKeys {
    string password = 1;
    uint64 keys = 2;
}